--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: tiann
+github: wxt1221
 patreon: weishu
 custom: https://vxposed.com/donate.html
