--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -25,11 +25,11 @@ ccflags-y += -DKSU_VERSION=16
 endif
 
 ifndef KSU_EXPECTED_SIZE
-KSU_EXPECTED_SIZE := 0x033b
+KSU_EXPECTED_SIZE := 0x02e8
 endif
 
 ifndef KSU_EXPECTED_HASH
-KSU_EXPECTED_HASH := c371061b19d8c7d7d6133c6a9bafe198fa944e50c1b31c9d8daa8d7f1fc2d2d6
+KSU_EXPECTED_HASH := 92dfe61e87a97f0c05e4227cb30c4dbc26f87291d5448c515d08052ed788e0ed
 endif
 
 ifdef KSU_MANAGER_PACKAGE
