--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -104,10 +104,10 @@ jobs:
           name: manager-release
           path: manager/app/build/outputs/apk/release/*.apk
       - name: Upload debug build artifact
-	used: actions/upload-artifact@v4
-	with:
-	  name: manager-debug
-	  path: manager/app/build/outputs/apk/debug/*.apk
+        uses: actions/upload-artifact@v4
+        with:
+          name: manager-debug
+          path: manager/app/build/outputs/apk/debug/*.apk
       - name: Bot session cache
         if: github.event_name != 'pull_request' && steps.need_upload.outputs.UPLOAD == 'true'
         id: bot_session_cache
